--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
