refactor: Update app name and short name in manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Soma AI",
+  "name": "Soma AI - Scholarship Finder",
   "icons": [
     {
       "src": "favicon.ico",
