--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.13.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@google/generative-ai": "^0.19.0",
@@ -17,6 +18,7 @@
     "bootstrap-icons": "^1.11.3",
     "cookie-session": "^2.1.0",
     "countries-list": "^3.1.1",
+    "dompurify": "^3.1.6",
     "downshift": "^9.0.8",
     "express-session": "^1.18.0",
     "firebase": "^10.13.1",
@@ -36,6 +38,9 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "redux": "^5.0.1",
+    "slate": "^0.103.0",
+    "slate-history": "^0.109.0",
+    "slate-react": "^0.110.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
