--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@google/generative-ai": "^0.19.0",
-    "@mui/material": "^6.1.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -29,6 +31,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-phone-input-2": "^2.15.1",
