--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "countries-list": "^3.1.1",
     "dompurify": "^3.1.6",
     "downshift": "^9.0.8",
+    "draft-js": "^0.11.7",
     "express-session": "^1.18.0",
     "firebase": "^10.13.1",
     "google-auth-library": "^9.11.0",
@@ -29,6 +30,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-phone-input-2": "^2.15.1",
@@ -41,6 +43,7 @@
     "slate": "^0.103.0",
     "slate-history": "^0.109.0",
     "slate-react": "^0.110.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
